update userdetails fixed
