# docs/swagger.yaml
@@ -1919,17 +1919,12 @@ paths:
       - JWT: []
       tags:
       - transaction
-  /user-details/{id}:
+  /user-details:
     put:
       consumes:
       - application/json
       description: Update user details
       parameters:
-      - description: User Detail id
-        in: path
-        name: id
-        required: true
-        type: string
       - description: User details
         in: body
         name: user
@@ -2025,7 +2020,7 @@ paths:
       - application/json
       description: Get user details by contract id
       parameters:
-      - description: User Detail id
+      - description: User id
         in: path
         name: id
         required: true
